<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    android:orientation="vertical"
    tools:context="compiler.todotomorrow.AddMeeting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/meeting_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:background="@drawable/edit_text_shape"
            android:id="@+id/meeting_nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textAutoComplete|textAutoCorrect" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/meet_date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:background="@drawable/edit_text_shape"
            android:id="@+id/meeting_dateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="date"
            android:onClick="showDatePickerETdate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/meet_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:background="@drawable/edit_text_shape"
            android:id="@+id/meeting_timeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="time"
            android:onClick="showTimePickerETtime" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/meet_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:background="@drawable/edit_text_shape"
            android:id="@+id/meeting_addressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/meet_description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:background="@drawable/edit_text_shape"
            android:id="@+id/meeting_descriptionET"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:inputType="textAutoComplete|textAutoCorrect" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/meet_priority"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:background="@drawable/edit_text_shape"
            android:id="@+id/meeting_priority_spnr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/meeting_saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="save_meetingBTN"
            android:text="@string/saveBtn" />


    </LinearLayout>
</ScrollView>
